--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "react-player": "^2.16.0"
+    "react-player": "^2.16.0",
+    "swiper": "^11.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
